@@ -10,6 +10,7 @@ Features
    * Removed night_compensate feature. This functionality is covered by noise_tune. (Joerg Weber)
    * Implemented a new reference frame algorithm to improve object recognition and location. (Joerg Weber)
    * Improved smartmask feature: real moving objects don't trigger the mask anymore. (Joerg Weber)
+   * Added area_detect feature. New config options: area_detect, on_area_detected. (Joerg Weber)
 
 Bugfixes
    * Fixed a problem with locate and fixed mask overlay (Dag Erlandsson).
